minor changes;